
* Changed from using Mutex to Monitor. Evidently Mutex causes thread
  join errors when Ruby is compiled with -disable-pthreads. (Patch
  supplied by Ittay Dror) 

* Fixed bug in makefile parser that had problems with extra spaces in
  file task names. (Patch supplied by Ittay Dror)

* Added a performance patch for reading large makefile dependency
  files. (Patch supplied by Ittay Dror)

== Version 0.8.1

* Removed requires on parsedate.rb (in Ftptools)
* Removed ftools from rake.rb.  Made it options in sys.rb

== Version 0.8.0

* Added task parameters (e.g. "rake build[version7]")
* Made task parameters passable to prerequisites.
* Comments are limited to 80 columns or so (suggested by Jamis Buck).
* Added -D to display full comments (suggested by Jamis Buck).
* The rake program will set the status value used in any explicit
  exit(n) calls. (patch provided by Stephen Touset)
* Fixed error in functional tests that were not including session (and
  silently skipping the functionl tests.
* Removed --usage and make -h the same as -H.
* Make a prettier inspect for tasks.

== Version 0.7.3

* Added existing and existing! methods to FileList
* FileLists now claim to be Arrays (via is_a?) to get better support
  from the FileUtil module.
* Added init and top_level for custom rake applications.

== Version 0.7.2

* Error messages are now send to stderr rather than stdout (from
  Payton Quackenbush).
* Better error handling on invalid command line arguments (from Payton
  Quackenbush).
* Added rcov task and updated unit testing for better code coverage.
* Fixed some bugs where the application object was going to the global
  appliation instead of using its own data.
* Added square and curly bracket patterns to FileList#include (Tilman
  Sauerbeck). 
* Added plain filename support to rule dependents (suggested by Nobu
  Nakada). 
* Added pathmap support to rule dependents.
* Added a 'tasks' method to a namespace to get a list of tasks
  associated with the namespace.